# DeepnoteCpp

./: CMakeLists.txt  README.md  build.sh  conanfile.txt
include/: constants.hpp  deepnote.hpp
src/: constants.hpp  deepnote.cpp  main.cpp  tone.hpp
